# Sockets

./: CMakeLists.txt  Exceptions.hpp  LICENSE  README.md  TcpSocket.cpp  TcpSocket.hpp  main.cpp
include/: HttpHeaders.hpp  IPAddress.hpp  TcpSocket.hpp  UdpSocket.hpp  Uri.hpp
include/Sockets/: Exceptions.hpp  IPAddress.hpp  TcpSocket.hpp  UdpSocket.hpp  Uri.hpp
src/: IPAddress.cpp  TcpSocket.cpp  UdpSocket.cpp
src/Sockets/: IPAddress.cpp  TcpSocket.cpp  UdpSocket.cpp  Uri.cpp
tests/: CMakeLists.txt  ExceptionTests.cpp  IPAddressTests.cpp  UriTests.cpp  tests.cpp
